--- a/style.css
+++ b/style.css
@@ -10,3 +10,11 @@ footer p, h4 {
     margin: 0;
     padding: 5px 5px;
 }
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
