--- a/styleme.css
+++ b/styleme.css
@@ -43,3 +43,19 @@ footer {
     padding: 15px;
     background-color: #809e90;
 }
+
+.has-dropcap:first-letter {
+    float: left;
+    font-size: 2rem;
+    line-height: 0.50;
+    font-family: "Source Sans Pro", "Times New Roman", Arial, sans-serif;
+    margin: 0.1em 0.1em 0.2em 0;
+}
+
+dl {
+    display: contents;
+}
+
+dt.sub-title {
+    color: #ecec4a;
+}
